# Tetris-SDL-game

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  SylwiaConfig.h.in  Tetris.sln  TetrisConfig.h.in  TetrisScreenshot  index.html  params.json
Debug/: Tetris.ilk
Tetris/: Bar.cpp  Bar.h  Field.cpp  Field.h  Field.h~  Form.cpp  Form.h  Framework.cpp  Framework.cpp~  Framework.h  Game.cpp  Game.h  J.cpp  J.h  L.cpp  L.h  Player.h  S.cpp  S.h  Singleton.h  Sprite.cpp  Sprite.h  Sqaure.cpp  Square.cpp  Square.h  T.cpp  T.h  Tetris.vcxproj  Tetris.vcxproj.filters  Timer.cpp  Timer.h  Z.cpp  Z.h  main.cpp
Tetris/Debug/: CL.read.1.tlog  CL.write.1.tlog  Tetris.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
Tetris/Release/: CL.read.1.tlog  CL.write.1.tlog  Tetris.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
cmake/: FindSDL.cmake  FindSDL_ttf.cmake  specifySDLTTFpaths.cmake  specifySDLpaths.cmake
inc/: Bar.h  CMakeLists.txt  Controls.h  Field.h  Form.h  Framework.h  Game.h  J.h  L.h  Player.h  S.h  Singleton.h  Sprite.h  Square.h  T.h  TetrisForms.h  Timer.h  Z.h
libs/: CMakeLists.txt
src/: Bar.cpp  CMakeLists.txt  Controls.inl  Field.cpp  Field.inl  Form.cpp  Form.inl  Framework.cpp  Game.cpp  J.cpp  L.cpp  Player.cpp  Player.inl  S.cpp  Sprite.cpp  Square.cpp  T.cpp  Timer.cpp  Z.cpp  main.cpp
src/tests/: CMakeLists.txt  MockForm.cpp
